--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mobile-apps
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/reformanda_apps
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
